# msme-saarthi-ai

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
apps/api/: alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/agents/: __init__.py
apps/api/app/agents/chat/: __init__.py  citation_validation.py  graph.py  image_provider.py  prompts.py  provider.py  retrieval.py  state.py
apps/api/app/core/: config.py  database.py  errors.py  logging.py  middleware.py
apps/api/app/features/: __init__.py
apps/api/app/features/auth/: __init__.py  crypto.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/app/features/chat/: __init__.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/app/features/health/: __init__.py  router.py  schemas.py
apps/api/app/retrieval/: __init__.py  client.py  embedding.py  fusion.py  models.py  opensearch.py  queries.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260713_0001_identity_and_sessions.py  20260713_0002_chat_messages.py
apps/api/tests/: __init__.py  conftest.py
apps/api/tests/agents/chat/: test_citation_validation.py  test_graph.py  test_image_provider.py  test_provider_stream.py
apps/api/tests/features/auth/: test_auth_integration.py  test_crypto.py
apps/api/tests/features/chat/: test_chat_integration.py  test_service.py
apps/api/tests/features/health/: test_health.py
apps/api/tests/retrieval/: __init__.py  conftest.py  test_embedding.py  test_filters.py  test_fusion.py  test_opensearch_integration.py  test_retriever.py
apps/api/tests/retrieval/fixtures/: README.md  responses.json
apps/worker/: pyproject.toml
apps/worker/sources/: README.md  official-central.json
apps/worker/tests/: test_pipeline.py
apps/worker/worker/: __init__.py  cli.py  pipeline.py
docs/: QUICKSTART.md
infrastructure/: README.md  compose.yaml
scripts/: README.md  bootstrap-local.sh  check-local.sh  local-service.sh  (+1 more)
(+60 files in other folders)
