[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "msme-saarthi-api"
version = "0.1.0"
description = "FastAPI application for MSME Saarthi AI"
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic>=1.16,<2.0",
  "argon2-cffi>=25.1,<26.0",
  "asyncpg>=0.30,<1.0",
  "cryptography>=45,<47",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "langgraph>=1.2,<2.0",
  "pydantic-settings>=2.7,<3.0",
  "sqlalchemy[asyncio]>=2.0.41,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21,<1.0",
  "mypy>=1.15,<2.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.9,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = ["integration: exercises multiple API feature layers"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["app", "tests"]

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true
